remplissage site visible / modif nav fixed admin

--- a/v1/admin/css/style_perso.css
+++ b/v1/admin/css/style_perso.css
@@ -4,3 +4,8 @@
 .titre_colonnes th {
     border: none;
 }
+.ttr_fixed {
+    position: fixed;
+    top: 10px;
+    width: 100%;
+}
